Fixed: features img being stretched

--- a/public/static/css/home.css
+++ b/public/static/css/home.css
@@ -282,7 +282,9 @@
       }
     }
     .features-img {
-      width: 500px;
+      width: 100%;
+      max-width: 500px;
+      height: auto;
     }
   }
 }
